# sentinel

./: .gitignore  .mcp.json  CLAUDE.md  Makefile  PLAN.md  README.md  pyproject.toml
.claude/agent-memory/write-tests/: MEMORY.md  feedback_api_testing.md  feedback_coverage_conflict.md
.claude/agents/: build-api-route.md  implement-model.md  implement-module.md  review-plan.md  write-config.md  write-tests.md
.claude/plans/: compiled-swimming-lerdorf.md
.claude/skills/check/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/lint/: SKILL.md
.claude/skills/lint-fix/: SKILL.md
.claude/skills/model-reference/: SKILL.md
.claude/skills/new-model/: SKILL.md
.claude/skills/next/: SKILL.md
configs/: autoencoder.yaml  base.yaml  deepar.yaml  diffusion.yaml  ensemble.yaml  gan.yaml  gru.yaml  isolation_forest.yaml  lstm.yaml  lstm_ae.yaml  matrix_profile.yaml  pi_connection.yaml  rnn.yaml  tadgan.yaml  tcn.yaml  tranad.yaml  vae.yaml  zscore.yaml
data/: datasets.json
src/sentinel/: __init__.py
tests/: conftest.py
tests/integration/: test_api.py  test_api_errors.py  test_cli.py  test_dashboard.py  test_deep_pipeline.py  test_ensemble.py  test_mcp.py  test_path_traversal.py  test_streaming.py  test_train_pipeline.py
tests/smoke/: test_end_to_end.py
tests/unit/: test_callbacks.py  test_config.py  test_config_validation.py  test_evaluator.py  test_features.py  test_ingest.py  test_loaders.py  test_path_validation.py  test_pi_connector.py  test_preprocessors.py  test_registry.py  test_synthetic.py  test_thresholds.py  test_tracking.py  test_trainer.py  test_types.py  test_validators.py
(+118 files in other folders)
