[project]
name = "sentinel"
version = "0.1.0"
description = "Anomaly detection platform with 16 ML models, FastAPI API, and MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "joblib>=1.5.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "polars>=1.0,<2.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "structlog>=25.5.0",
    "stumpy>=1.14.1",
    "typer>=0.24.1",
]

[project.scripts]
sentinel = "sentinel.cli.app:app"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["stumpy", "shap", "umap", "sklearn.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end acceptance tests",
    "pi: PI System tests (Windows only)",
    "benchmark: performance benchmarks",
]
asyncio_mode = "auto"

[dependency-groups]
api = [
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.22",
    "uvicorn[standard]>=0.42.0",
]
deep = [
    "einops>=0.8.2",
    "torch>=2.11.0",
]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]
explain = [
    "shap>=0.49.1",
    "umap-learn>=0.5.11",
]
mcp = [
    "fastmcp>=3.1.1",
    "httpx>=0.28.1",
]
